[gd_scene load_steps=9 format=3 uid="uid://c1hpn0ss77mal"]

[ext_resource type="Script" path="res://scripts/level_02.gd" id="1_x7rjx"]
[ext_resource type="PackedScene" uid="uid://crjqsjwl2q87i" path="res://scenes/prefab/gate.tscn" id="2_cg87p"]
[ext_resource type="PackedScene" uid="uid://ctmp7o4ijahp2" path="res://scenes/prefab/player.tscn" id="3_wn6sj"]
[ext_resource type="PackedScene" uid="uid://ds5xwtjbwixmf" path="res://scenes/prefab/fallout_zone.tscn" id="4_c7j2u"]
[ext_resource type="PackedScene" uid="uid://bb80ejp6p3y0w" path="res://scenes/prefab/side_wall.tscn" id="5_vfk61"]
[ext_resource type="PackedScene" uid="uid://wi1yeq0iuogq" path="res://scenes/prefab/platform_parent.tscn" id="6_ns71g"]
[ext_resource type="PackedScene" uid="uid://q5v5cu784eqv" path="res://scenes/prefab/escape_button.tscn" id="7_dx8c2"]
[ext_resource type="PackedScene" uid="uid://c5temua38dqbd" path="res://scenes/prefab/detect_area.tscn" id="8_7o6xj"]

[node name="Level-02" type="Node2D"]
script = ExtResource("1_x7rjx")

[node name="EscapeButton" parent="." instance=ExtResource("7_dx8c2")]

[node name="Gate" parent="." instance=ExtResource("2_cg87p")]
position = Vector2(1116, 483)

[node name="Player" parent="." instance=ExtResource("3_wn6sj")]
position = Vector2(84, 502)

[node name="FalloutZone" parent="." instance=ExtResource("4_c7j2u")]
position = Vector2(576, 684)

[node name="SideWall" parent="." instance=ExtResource("5_vfk61")]
position = Vector2(-17, 313)

[node name="SideWall2" parent="." instance=ExtResource("5_vfk61")]
position = Vector2(1169, 314)

[node name="platform-parent" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(84, 547)

[node name="platform-parent2" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(193, 500)

[node name="DetectArea" parent="." instance=ExtResource("8_7o6xj")]
position = Vector2(281, 342)

[node name="platform-parent3" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(300, 453)

[node name="platform-parent4" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(360, 453)

[node name="platform-parent5" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(360, 453)

[node name="DetectArea2" parent="." instance=ExtResource("8_7o6xj")]
position = Vector2(486, 417)

[node name="platform-parent7" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(486, 492)
scale = Vector2(0.5, 0.2)

[node name="platform-parent8" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(566, 492)
scale = Vector2(0.5, 0.2)

[node name="platform-parent9" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(646, 492)
scale = Vector2(0.5, 0.2)

[node name="platform-parent10" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(726, 492)
rotation = 3.14159
scale = Vector2(0.5, 0.2)

[node name="platform-parent11" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(806, 492)
scale = Vector2(0.5, 0.2)

[node name="DetectArea3" parent="." instance=ExtResource("8_7o6xj")]
position = Vector2(848, 417)

[node name="platform-parent12" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(886, 492)
scale = Vector2(0.5, 0.2)

[node name="platform-parent13" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(1003, 492)
scale = Vector2(0.5, 0.2)

[node name="platform-parent14" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(1116, 528)
scale = Vector2(1.092, 1)

[node name="platform-parent15" parent="." instance=ExtResource("6_ns71g")]
position = Vector2(886, 684)
scale = Vector2(0.5, 0.2)

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_entered" from="DetectArea2" to="." method="_on_detect_area_2_body_entered"]
[connection signal="body_entered" from="DetectArea3" to="." method="_on_detect_area_3_body_entered"]
